--- a/androidClient/app/src/main/res/values/colors.xml
+++ b/androidClient/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="bcolorPrimaryDark">#303F9F</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grey500">#9E9E9E</color>
     <color name="transparent_black">#e80a0a0a</color>
     <color name="lighterBlack">#c5000000</color>
     <color name="colorAccent">#FF4081</color>
@@ -10,4 +12,5 @@
     <color name="colorPrimaryContrast">#ffffffff</color>
     <color name="colorAccentFaint">#ffcdd2</color>
     <color name="grey">#808080</color>
+    <color name="mac_color">#388E3C</color>
 </resources>
